readability fixes

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -135,4 +135,5 @@ summary:hover {
   top: 0;
   width: 100vw;
   z-index: -2;
+	opacity: 0.5;
 }
